# UnalmasEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Worker_Thread_QT_pattern.txt  docs.txt  editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pieloader.cpp  pieloader.h  project.cpp  project.h  scene.cpp  scene.h  unalmas_datafile.cpp  unalmas_datafile.h  unalmas_guid.cpp  unalmas_guid.h  unalmas_sockets.cpp  unalmas_sockets.h
